--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Marwah Alaofi"
-  avatar           : "profile.png"
+  avatar           : "/images/profile.jpeg"
   bio              : "A PhD Candidate"
   location         : "Melbourne, Australia"
   employer         :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  # github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
