--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "about-me"
+  - title: "About me"
     url: /about-me/
         
   - title: "Blog Posts"
