--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Marwah Alaofi"
   avatar           : "bio-photo.jpeg"
-  bio              : "A PhD Candidate"
+  bio              : "PhD Candidate @RMIT"
   location         : "Melbourne, Australia"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
