--- a/_config.yml
+++ b/_config.yml
@@ -96,10 +96,10 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  # github           : "academicpages"
+  # github           : "marwahalaofi"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "marwah.k.a"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
